# nauchny-klubok

./: .env.example  .gitignore  Makefile  README.md  bulk_ingest.py  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
docs/: IDEA.md  PIPELINE.md
p2kg/: __init__.py  chunk.py  concurrency.py  config.py  context.py  embedder.py  persist.py  pipeline.py  provenance.py  retrieve.py  roles.py  schema.py  trace.py  verify.py
p2kg/api/: __init__.py  app.py  control.py  service.py
p2kg/api/static/: index.html
p2kg/extract/: __init__.py  _common.py  define.py  table.py  text.py
p2kg/ingest/: __init__.py  arxiv.py  base.py  pdf.py  pdf_layout.py
p2kg/link/: __init__.py  canon.py  concepts.py  dedup.py  resolve.py  stitch.py
p2kg/llm/: __init__.py  client.py  prompts.py  steps.py
p2kg/prompts/concept/: define.system.jinja  define.user.jinja  hierarchy.system.jinja  hierarchy.user.jinja  link.system.jinja  link.user.jinja
p2kg/prompts/extract/: define.system.jinja  define.user.jinja  frame.system.jinja  frame.user.jinja
p2kg/prompts/link/: canon_rel.system.jinja  canon_rel.user.jinja  dedup.system.jinja  dedup.user.jinja  (+6 more)
p2kg/stores/: __init__.py  docstore.py  graphstore.py
tests/: test_chunk.py  test_concepts.py  test_config.py  test_context.py  test_dedup_facts.py  test_docstore.py  test_extract.py  test_ingest.py  test_link.py  test_llm.py  test_pdf_layout.py  test_persist.py  test_pipeline.py  test_provenance.py  test_resolve.py  test_retrieve.py  test_roles.py  test_schema.py  test_schema_tolerance.py  test_stores.py  test_trace.py  test_verify.py
(+16 files in other folders)
