[project]
name = "p2kg"
version = "0.1.0"
description = "Научный клубок — граф знаний R&D по документам + интеллектуальный поиск"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "openai>=1.40",
    "instructor>=1.0",
    "jinja2>=3.1",
    "neo4j>=5.13",
    "pymongo>=4.6",
    "langchain-text-splitters>=0.2",
    "pymupdf>=1.24",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
fast = ["igraph>=0.11"]        # ускоряет in-memory PPR-ретрив (опц.)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["p2kg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
